app/assets/stylesheets/projects2.css.scss
@import 'bourbon';
@import 'neat';

.project-card {
  background-color: #FFF;
  padding: $gutter;
  @include span-columns(3 of 12);
  &:nth-child(4n) { @include omega; }
  .description {
    max-height: 8em;
    overflow: hidden;
  }
  margin-bottom: $gutter;
  box-shadow: 4px 4px 2px #CCC;

  .byline { margin: $gutter/2; }
  .progress {
    overflow: hidden;
    height: 12px;
    @include linear-gradient(top, #c5c5c5, #c9c9c9);
    border-radius: 6px;
    .bar {
      @include linear-gradient(top, #2b5862, #6b9199);
      @include transition(width 0.6s ease);
    }
  }
}

.form-header {
  text-align: center;
  margin-bottom: $gutter;
}
.form {
  .field {
    margin-top: $gutter;
    @include row;
    label {
      text-align: right;
      @include span-columns(4 of 12);
    }
    input:not([type=submit]):not([type=file]), textarea {
      @include span-columns(4 of 12);
      padding: $gutter;
    }
    .help-block { @include span-columns(2 of 12); }

    .field_with_errors {
      @include span-columns(4 of 12);
      label, input:not([type=submit]):not([type=file]), textarea {
        @include span-columns(4 of 4);
      }
    }
    /* TODO figure out an elegant way to display this... */
    div.cke { @include span-columns(6 of 12); }
  }
  div.submit {
    margin: $gutter;
    @include span-columns(4 of 12);
    @include shift(4);
    input { @include fill-parent; }
  }
}

